Implements mongo connection

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-PORT=3000
-APP_BASE_ROUTE=learning_node
+PORT=3009
+APP_BASE_ROUTE=hey
+
+MONGO_CONNECTION=mongodb+srv://hey_mini_chat:O6kZvHlL18QytjJe@cluster0.0g5ho.mongodb.net/test
 
 DB_DRIVER=mariadb
 DB_PORT=3306
