--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.2",
     "mariadb": "^2.5.4",
     "mongoose": "^6.0.8",
     "sequelize": "^6.6.5",
